Add hero media image next to headline

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <section class="hero__content">
       <h1>The only math app that kids ask for by name.</h1>
     </section>
+    <figure class="hero__media">
+      <img
+        src="images/home_1.png"
+        alt="Two children happily using the MathMonsters app"
+      />
+    </figure>
   </main>
 </body>
 </html>
