Add hero tagline and download buttons

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
   <main class="hero">
     <section class="hero__content">
       <h1>The only math app that kids ask for by name.</h1>
+      <p class="hero__tagline">
+        Flip homework battles into monster battles – where every lesson feels like play.
+      </p>
+      <div class="hero__actions">
+        <a class="button button--primary" href="#">Download App</a>
+        <a class="button button--outline" href="#">Download App</a>
+      </div>
     </section>
     <figure class="hero__media">
       <img
